[tool.poetry]
name = "lautcomponents"
version = "1.3.0"
description = "Rasa NLU Pipeline Components"
authors = ["Team lautmaler <info@die-lautmaler.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"

rasa = "^3.2.7"
tokenizers = "^0.15.0"
websockets = "10.0.0"

[tool.poetry.group.dev.dependencies]
black = { version = ">=22.0.0", extras = ["d"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
